--- a/theme.html
+++ b/theme.html
@@ -51,7 +51,12 @@
     {% endif %}
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	#mc_embed_signup{background:#f7f7f7; border: 1px solid #EEE;
+        border-radius: 3px;
+        margin-top: 3em;clear:left; font:14px Helvetica,Arial,sans-serif; }
+     #mc_embed_signup h2 {
+          margin: 0;
+     }
 	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
